--- a/apps/portal/project.json
+++ b/apps/portal/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "website",
+  "name": "portal",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/website",
+  "sourceRoot": "apps/portal",
   "projectType": "application",
   "targets": {
     "build": {
@@ -9,12 +9,12 @@
       "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
-        "root": "apps/website",
-        "outputPath": "dist/apps/website"
+        "root": "apps/portal",
+        "outputPath": "dist/apps/portal"
       },
       "configurations": {
         "development": {
-          "outputPath": "apps/website"
+          "outputPath": "apps/portal"
         },
         "production": {}
       }
@@ -23,16 +23,16 @@
       "executor": "@nrwl/next:server",
       "defaultConfiguration": "development",
       "options": {
-        "buildTarget": "website:build",
+        "buildTarget": "portal:build",
         "dev": true
       },
       "configurations": {
         "development": {
-          "buildTarget": "website:build:development",
+          "buildTarget": "portal:build:development",
           "dev": true
         },
         "production": {
-          "buildTarget": "website:build:production",
+          "buildTarget": "portal:build:production",
           "dev": false
         }
       }
@@ -40,14 +40,14 @@
     "export": {
       "executor": "@nrwl/next:export",
       "options": {
-        "buildTarget": "website:build:production"
+        "buildTarget": "portal:build:production"
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/website/jest.config.js",
+        "jestConfig": "apps/portal/jest.config.js",
         "passWithNoTests": true
       }
     },
@@ -55,7 +55,7 @@
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["apps/website/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": ["apps/portal/**/*.{ts,tsx,js,jsx}"]
       }
     }
   },
